objects/EUR_CRM_Account_Team__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Access_Level__c</fullName>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Share_Record_Id__c</fullName>
        <label>Account Share Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Account Team</relationshipLabel>
        <relationshipName>Account_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_EU_Account_Share_Record_Id__c</fullName>
        <label>EU Account Share Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND (3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9)) OR 2</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>DE Account Team</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>DE Account Team</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_DE_National_Sales_Manager_On_Trade</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_DE_KAM_Specialized_Wholesalers</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_DE_Regional_Sales_Manager_On_Trade_Prestige</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_DE_Regional_Sales_Manager_On_Trade_West</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_DE_Regional_Sales_Manager_On_Trade_South</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_DE_Regional_Sales_Manager_On_Trade_West</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>EUR DE ON Trade User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Key Account Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Team (EU)</label>
    <nameField>
        <displayFormat>ATM-{00000000}</displayFormat>
        <label>Account Team No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Account_Team</fullName>
        <active>true</active>
        <label>DE Account Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Account_Team</fullName>
        <active>true</active>
        <label>GB Account Team</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>